# SLMs-Studio---Fine-Tune-Forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.sh  run_windows.bat  slmforge.service.example
.github/workflows/: ci.yml
app/: __init__.py  api.py  dataset_converter.py  exporter.py  hardware.py  job_manager.py  main.py  models_catalog.py  server_inference.py  train_worker.py  trainer.py
tests/: conftest.py  test_dataset_converter.py  test_hardware.py  test_job_manager.py  test_models_catalog.py
ui/: app.js  index.html  style.css
