[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-forge"
version = "1.0.0"
description = "Desktop studio for fine-tuning Small Language Models (SLMs) with LoRA/QLoRA"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SLM Forge Contributors" },
]
keywords = [
    "machine-learning",
    "nlp",
    "fine-tuning",
    "lora",
    "qlora",
    "small-language-model",
    "slm",
    "transformers",
    "peft",
    "desktop-app",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pywebview>=4.4.1",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.42",
    "peft>=0.11",
    "trl>=0.9",
    "datasets>=2.19",
    "accelerate>=0.30",
    "sentencepiece",
    "protobuf",
    # Uncomment for QLoRA 4-bit quantization on CUDA:
    # "bitsandbytes>=0.43",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
all = [
    "slm-forge[ml,dev]",
]

[project.urls]
Homepage = "https://github.com/slm-forge/slm-forge"
Documentation = "https://github.com/slm-forge/slm-forge#readme"
Repository = "https://github.com/slm-forge/slm-forge"
Issues = "https://github.com/slm-forge/slm-forge/issues"

[project.scripts]
slm-forge = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
